--- a/dotnet/todolist-api/package.json
+++ b/dotnet/todolist-api/package.json
@@ -8,8 +8,8 @@
     "dev": "tsonic run src/App.ts"
   },
   "devDependencies": {
-    "@tsonic/core": "*",
-    "@tsonic/dotnet": "^0.8.1",
-    "@tsonic/globals": "^0.3.4"
+    "@tsonic/core": "^0.6.0",
+    "@tsonic/dotnet": "^0.8.3",
+    "@tsonic/globals": "^0.3.6"
   }
 }
