--- a/js/todolist-api/package.json
+++ b/js/todolist-api/package.json
@@ -8,9 +8,10 @@
     "dev": "tsonic run src/App.ts"
   },
   "devDependencies": {
-    "@tsonic/core": "^0.4.0",
+    "@tsonic/core": "^0.6.0",
     "@tsonic/dotnet": "^0.8.3",
-    "@tsonic/globals": "^0.3.5",
+    "@tsonic/globals": "^0.3.6",
+    "@tsonic/js": "^0.1.0",
     "@tsonic/js-globals": "^0.4.3"
   }
 }
