--- a/nodejs/webserver/package.json
+++ b/nodejs/webserver/package.json
@@ -7,9 +7,9 @@
     "dev": "tsonic run"
   },
   "devDependencies": {
-    "@tsonic/core": "*",
-    "@tsonic/globals": "*",
-    "@tsonic/js-globals": "*",
-    "@tsonic/nodejs": "*"
+    "@tsonic/core": "^0.6.0",
+    "@tsonic/globals": "^0.3.6",
+    "@tsonic/js-globals": "^0.4.3",
+    "@tsonic/nodejs": "^0.4.3"
   }
 }
