--- a/bcl/todolist-api/package.json
+++ b/bcl/todolist-api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "typecheck": "tsc -p tsconfig.json",
     "build": "tsonic build",
-    "emit": "tsonic emit",
+    "generate": "tsonic generate",
     "dev": "tsonic run"
   },
   "devDependencies": {
