--- a/workspaces/scoped-multi-project/package.json
+++ b/workspaces/scoped-multi-project/package.json
@@ -6,15 +6,14 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run -w @acme/domain build && npm run -w @acme/domain bindings && npm run -w @acme/api build",
-    "typecheck": "npm run -w @acme/domain typecheck && npm run -w @acme/domain build && npm run -w @acme/domain bindings && npm run -w @acme/api typecheck"
+    "build": "npm run -w @acme/domain build && npm run -w @acme/api build",
+    "typecheck": "npm run -w @acme/domain typecheck && npm run -w @acme/domain build && npm run -w @acme/api typecheck"
   },
   "devDependencies": {
     "@tsonic/core": "10.0.1",
     "@tsonic/dotnet": "10.0.1",
     "@tsonic/globals": "10.0.1",
-    "@tsonic/tsbindgen": "0.7.25",
-    "tsonic": "0.0.27",
+    "tsonic": "0.0.30",
     "typescript": "^5.0.0"
   }
 }
