--- a/workspaces/unscoped-multi-project/packages/acme-domain/package.json
+++ b/workspaces/unscoped-multi-project/packages/acme-domain/package.json
@@ -12,8 +12,6 @@
   },
   "scripts": {
     "typecheck": "tsc -p tsconfig.json",
-    "build": "tsonic build",
-    "bindings": "node ./scripts/generate-bindings.mjs"
+    "build": "tsonic build"
   }
 }
-
